Add JVM parameter settings